<resources>
    <array name="rent_image">
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
        <item>@drawable/imgrent</item>
    </array>

    <string name="app_name">DigitalConstruction</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pt_pp">PT. PP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user">User</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukan_ulang_password">Masukan Ulang Password</string>
    <string name="skill">Skill</string>
    <string name="no_handphone">No Handphone</string>
    <string name="daftar">Daftar</string>
    <string name="jabatan">Jabatan</string>
    <string name="masuk">Masuk</string>
    <string-array name="data_name">
        <item>Telkom Tower</item>
        <item>Bank Negara Indonesia</item>
        <item>Keraton</item>
        <item>Raffles Jakarta</item>
        <item>Wisma Mulia</item>
    </string-array>

    <string-array name="data_detail">
        <item>Pekerjaan awal</item>
        <item>Pekerjaan pondasi</item>
        <item>Pekerjaan stuktur</item>
        <item>Pekerjaan dinding</item>
        <item>Pekerjaan kusen, pintu, dan jendela</item>
        <item>Pekerjaan rangka atap</item>
        <item>Pekerjaan plumbling, mekanikal dan elektrikal</item>
        <item>Pekerjaan finishing</item>
        <item>Pekerjaan tambahan</item>
        <item>Pembersihan</item>
    </string-array>

    <string-array name="colors">
        <item>#1BCFB4</item>
        <item>#1BCFB4</item>
        <item>#1BCFB4</item>
        <item>#1BCFB4</item>
        <item>#1BCFB4</item>
        <item>#E56464</item>
        <item>#E56464</item>
        <item>#E56464</item>
        <item>#E56464</item>
        <item>#E56464</item>

    </string-array>

    <string-array name="rent_kota">
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
        <item>Jakarta</item>
    </string-array>

    <string-array name="rent_harga">
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
        <item>Rp 2.100.000</item>
    </string-array>

    <string-array name="rent_unit">
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
        <item>15 Unit</item>
    </string-array>
    <string-array name="rent_jam">
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
        <item>25 Jam</item>
    </string-array>
    <string-array name="rent_name">
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
        <item>Cartepillar Shovel CS300</item>
    </string-array>
</resources>
